--- a/desenvolvimento.html
+++ b/desenvolvimento.html
@@ -1665,6 +1665,159 @@
                 <p id="preço-produto" >R$ 04,90</p>
             </div>
 
+            <div class="bloco" id="blocomob" onclick="addproduto(
+                'A Imperfeição Da Alegria',
+                '09,90',
+                'https://i.postimg.cc/mr1W3ghb/testemokupdois.png',
+                'Se você quiser se aceitar, você tenho que fazer isso agora. Pare de jogar jogos consigo mesmo. Haverá nunca será um momento “perfeito” onde tudo vai se encaixar. Que é uma ilusão. Na verdade, isso é um desculpe, você se dá tempo e novamente, para que você não precise começar. Eu sei que é desagradável. Eu sei que você provavelmente encontrará todo tipo de verdades que você tem evitado todo esse tempo, mas é exatamente isso que faz com que todos isso é tão urgente. Você só tem uma vida para viver. Faça valer a pena. Faça valer a pena para aquela pessoa que realmente importa em sua vida. Essa pessoa, claro, é você. Começa hoje. Você deve isso a si mesmo.'
+                ,'81 paginas',
+                '',
+                '',
+                '',
+                '',
+                '29,90',
+                'https://mpago.li/33vGMFK'
+            )" >
+                <img src="https://i.postimg.cc/mr1W3ghb/testemokupdois.png" alt="" id="img-produto">
+                <p id="titulo-produto" >A Imperfeição Da Alegria</p>
+                <p id="autor-produto" >Desenvolvimento Social e Profissional</p>
+                <p id="preço-produto" >R$ 09,90</p>
+            </div>
+
+            <div class="bloco" id="blocomob" onclick="addproduto(
+                'Desenvolva O Seu QI Financeiro',
+                '09,90',
+                'https://i.postimg.cc/4d9ZGbck/testemokupdois.png',
+                'Invista em ativos que trazem valor a longo prazo. Qualquer coisa que lhe traga mais rendimento é um ativo. Não invista muito em passivos, como carros ou barcos.Mesmo as casas não são consideradas ativos até que estejam totalmente liquidadas (Se você perder seu emprego amanhã e não poder pagar a sua casa, a sua casa é um ativoou passivo?)Você está disposto a sair da sua zona de conforto e pagar o preço para aumentar o seu QI financeiro ou ignorar os sinais dos tempos e esperar que o seu patrão, o governo e o banco cuidem de você financeiramente para o resto de sua vida, vivendo abaixo dos seus meios e nunca correr riscos para melhorar o futuro da sua família?'
+                ,'44 paginas',
+                '',
+                '',
+                '',
+                '',
+                '29,90',
+                'https://mpago.li/33vGMFK'
+            )" >
+                <img src="https://i.postimg.cc/4d9ZGbck/testemokupdois.png" alt="" id="img-produto">
+                <p id="titulo-produto" >Desenvolva O Seu QI Financeiro</p>
+                <p id="autor-produto" >Desenvolvimento Social e Profissional</p>
+                <p id="preço-produto" >R$ 09,90</p>
+            </div>
+
+
+            <div class="bloco" id="blocomob" onclick="addproduto(
+                'Guia Do Trabalho A Partir De Casa',
+                '09,90',
+                'https://i.postimg.cc/jS4ZDhCb/smartmockups-lv3y99cu-Recuperado.png',
+                'Invista em ativos que trazem valor a longo prazo. Qualquer coisa que lhe traga mais rendimento é um ativo. Não invista muito em passivos, como carros ou barcos.Mesmo as casas não são consideradas ativos até que estejam totalmente liquidadas (Se você perder seu emprego amanhã e não poder pagar a sua casa, a sua casa é um ativoou passivo?)Você está disposto a sair da sua zona de conforto e pagar o preço para aumentar o seu QI financeiro ou ignorar os sinais dos tempos e esperar que o seu patrão, o governo e o banco cuidem de você financeiramente para o resto de sua vida, vivendo abaixo dos seus meios e nunca correr riscos para melhorar o futuro da sua família?'
+                ,'105 paginas',
+                '',
+                '',
+                '',
+                '',
+                '29,90',
+                'https://mpago.li/33vGMFK'
+            )" >
+                <img src="https://i.postimg.cc/jS4ZDhCb/smartmockups-lv3y99cu-Recuperado.png" alt="" id="img-produto">
+                <p id="titulo-produto" >Guia Do Trabalho A Partir De Casa</p>
+                <p id="autor-produto" >Desenvolvimento Social e Profissional</p>
+                <p id="preço-produto" >R$ 09,90</p>
+            </div>
+
+            <div class="bloco" id="blocomob" onclick="addproduto(
+                'Marketing Relacional Com E-mails',
+                '09,90',
+                'https://i.postimg.cc/pLxcrGQ2/smartmockups-lv3y99cu-Recuperado.png',
+                'Invista em ativos que trazem valor a longo prazo. Qualquer coisa que lhe traga mais rendimento é um ativo. Não invista muito em passivos, como carros ou barcos.Mesmo as casas não são consideradas ativos até que estejam totalmente liquidadas (Se você perder seu emprego amanhã e não poder pagar a sua casa, a sua casa é um ativoou passivo?)Você está disposto a sair da sua zona de conforto e pagar o preço para aumentar o seu QI financeiro ou ignorar os sinais dos tempos e esperar que o seu patrão, o governo e o banco cuidem de você financeiramente para o resto de sua vida, vivendo abaixo dos seus meios e nunca correr riscos para melhorar o futuro da sua família?'
+                ,'24 paginas',
+                '',
+                '',
+                '',
+                '',
+                '29,90',
+                'https://mpago.li/33vGMFK'
+            )" >
+                <img src="https://i.postimg.cc/pLxcrGQ2/smartmockups-lv3y99cu-Recuperado.png" alt="" id="img-produto">
+                <p id="titulo-produto" >Marketing Relacional Com E-mails</p>
+                <p id="autor-produto" >Comidas e Bebidas</p>
+                <p id="preço-produto" >R$ 09,90</p>
+            </div>
+
+            <div class="bloco" id="blocomob" onclick="addproduto(
+                'Receitas Saudáveis e Cheias de Vida Livro 1',
+                '09,90',
+                'https://i.postimg.cc/QtNJWTnX/MODELO-EBOOK-1.png',
+                'A culinária saudável tem se tornado cada vez mais popular nos últimos anos, com as pessoas buscando alternativas mais balanceadas e nutritivas em suas refeições. A comida saudável não é apenas uma questão de modismo, mas sim de cuidado com a saúde e qualidade de vida.Uma alimentação equilibrada, rica em nutrientes e livre de alimentos processados e industrializados, pode trazer inúmeros benefícios para a nossa saúde. Além de ajudar a prevenir doenças, como obesidade, diabetes e hipertensão, a comida saudável também pode melhorar a nossa qualidade de vida, fornecendo mais energia, disposição e bem-estar.'
+                ,'161 Páginas',
+                '',
+                '',
+                '',
+                '',
+                '29,90',
+                'https://mpago.li/33vGMFK'
+            )" >
+                <img src="https://i.postimg.cc/QtNJWTnX/MODELO-EBOOK-1.png" alt="" id="img-produto">
+                <p id="titulo-produto" >Receitas Saudáveis e Cheias de Vida Livro 1</p>
+                <p id="autor-produto" >Comidas e Bebidas</p>
+                <p id="preço-produto" >R$ 09,90</p>
+            </div>
+
+            <div class="bloco" id="blocomob" onclick="addproduto(
+                'Receitas Saudáveis e Cheias de Vida Livro 2',
+                '09,90',
+                'https://i.postimg.cc/v83rghnk/MODELO-EBOOK-2.png',
+                'Nos últimos anos, a culinária saudável tem conquistado cada vez mais adeptos, com pessoas em busca de opções balanceadas e nutritivas para suas refeições. Essa tendência não se resume apenas a uma moda passageira, mas sim a uma escolha consciente em favor da saúde e qualidade de vida. Uma alimentação equilibrada, rica em nutrientes e livre de alimentos processados, pode trazer uma série de benefícios para o nosso bem-estar geral. Além de ajudar a prevenir doenças como obesidade, diabetes e hipertensão, uma dieta saudável pode também proporcionar mais energia, disposição e bem-estar. As receitas saudáveis desempenham um papel fundamental nesse contexto, mostrando que é possível se alimentar de forma saborosa e nutritiva ao mesmo tempo.'
+                ,'173 Páginas',
+                '',
+                '',
+                '',
+                '',
+                '29,90',
+                'https://mpago.li/33vGMFK'
+            )" >
+                <img src="https://i.postimg.cc/v83rghnk/MODELO-EBOOK-2.png" alt="" id="img-produto">
+                <p id="titulo-produto" >Receitas Saudáveis e Cheias de Vida Livro 2</p>
+                <p id="autor-produto" >Comidas e Bebidas</p>
+                <p id="preço-produto" >R$ 09,90</p>
+            </div>
+
+            <div class="bloco" id="blocomob" onclick="addproduto(
+                'Receitas Saudáveis e Cheias de Vida Livro 3',
+                '09,90',
+                'https://i.postimg.cc/bvVPSKzd/MODELO-EBOOK-3.png',
+                'Quando pensamos em sobremesas, geralmente vem à mente aquelas opções cheias de gordura, açúcar e calorias. No entanto, é possível desfrutar de deliciosas sobremesas que são ao mesmo tempo saudáveis e cheias de vida. Com a crescente preocupação com a alimentação saudável e a culinária saudável, é cada vez mais fácil encontrar receitas que atendam a essas necessidades.A comida saudável não precisa ser sem graça. Pelo contrário, é possível criar sobremesas que são não só saborosas, mas também benéficas para a saúde. Por exemplo, substituir o açúcar refinado por opções mais naturais, como mel, agave ou tâmaras, é uma maneira de tornar suas sobremesas mais saudáveis. Além disso, utilizar ingredientes integrais, como farinha de aveia, farinha de amêndoas ou farinha de coco, em vez de farinha branca, pode adicionar nutrientes e fibras às suas receitas'
+                ,'173 Páginas',
+                '',
+                '',
+                '',
+                '',
+                '29,90',
+                'https://mpago.li/33vGMFK'
+            )" >
+                <img src="https://i.postimg.cc/bvVPSKzd/MODELO-EBOOK-3.png" alt="" id="img-produto">
+                <p id="titulo-produto" >Receitas Saudáveis e Cheias de Vida Livro 3</p>
+                <p id="autor-produto" >Comidas e Bebidas</p>
+                <p id="preço-produto" >R$ 09,90</p>
+            </div>
+
+            <div class="bloco" id="blocomob" onclick="addproduto(
+                'Receitas Saudáveis e Cheias de Vida Livro 4',
+                '09,90',
+                'https://i.postimg.cc/8kJKhsdT/MODELO-EBOOK-4.png',
+                'As bebidas são uma parte essencial de nossas vidas diárias e desempenham um papel significativo em nos manter hidratados e saudáveis. No entanto, nem todas as bebidas são criadas iguais e é importante escolher opções que contribuam para a nossa qualidade de vida e boa alimentação.Optar por bebidas saudáveis pode fazer uma grande diferença em nosso bem-estar geral. A ingestão de bebidas ricas em nutrientes, como sucos naturais, smoothies e chás, pode fornecer ao nosso corpo os nutrientes necessários para funcionar de maneira adequada. Além disso, bebidas saudáveis podem ser uma ótima maneira de evitar o consumo excessivo de açúcar e calorias vazias, que estão tão presentes em refrigerantes e outras bebidas industrializadas.'
+                ,'57 Páginas',
+                '',
+                '',
+                '',
+                '',
+                '29,90',
+                'https://mpago.li/33vGMFK'
+            )" >
+                <img src="https://i.postimg.cc/8kJKhsdT/MODELO-EBOOK-4.png" alt="" id="img-produto">
+                <p id="titulo-produto" >Receitas Saudáveis e Cheias de Vida Livro 4</p>
+                <p id="autor-produto" >Comidas e Bebidas</p>
+                <p id="preço-produto" >R$ 09,90</p>
+            </div>
+
     </article>
 
    
