--- a/promoçao.html
+++ b/promoçao.html
@@ -75,6 +75,7 @@
         }
     </style>
 
+
 <header class="headermob">
 
     <!--LOGOTIPO DESKTOP-->
@@ -82,7 +83,6 @@
         <img src="https://i.postimg.cc/8s8LnN55/aweto.png" alt="" id="logodesk">
     </a>
    
-
     <!--Menu mobile-->
     <article class="menu">
 
@@ -958,7 +958,7 @@
         </div>
         
         <nav>
-            <a href="religião.html" id="dados-menu">Religião</a>
+            <a href="comida.html" id="dados-menu">Comida e Saúde</a>
             <a href="desenvolvimento.html" id="dados-menu">Desenvolvimento Social e Profissional</a>
             <a href="promoçao.html" id="dados-menu">Promoção e Ofertas</a>
             <a href="todos.html" id="dados-menu">Todos</a>
