--- a/promoçao.html
+++ b/promoçao.html
@@ -1561,7 +1561,7 @@
         )" >
             <img src="https://i.postimg.cc/hvLzDPMH/MODELO-EBOOK-UM.png" alt="" id="img-produto">
             <p id="titulo-produto" >Alcançando suas Metas de Perda de Peso</p>
-            <p id="autor-produto" >Academia e Saúde</p>
+            <p id="autor-produto" >Saúde e Dietas Saudaveis</p>
             <p id="preço-produto" >R$ 09,90</p>
         </div>
 
@@ -1580,7 +1580,7 @@
         )" >
             <img src="https://i.postimg.cc/d1wWBDp0/MODELO-EBOOK-dois.png" alt="" id="img-produto">
             <p id="titulo-produto" >Lições Aceleradas de Saúde</p>
-            <p id="autor-produto" >Academia e Saúde</p>
+            <p id="autor-produto" >Saúde e Dietas Saudaveis</p>
             <p id="preço-produto" >R$ 09,90</p>
         </div>
 
@@ -1600,7 +1600,7 @@
         )" >
             <img src="https://i.postimg.cc/sgXkRzFT/saude.png" alt="" id="img-produto">
             <p id="titulo-produto" >Saúde Condicionamento Físico e Palavras </p>
-            <p id="autor-produto" >Academia e Saúde</p>
+            <p id="autor-produto" >Saúde e Dietas Saudaveis</p>
             <p id="preço-produto" >R$ 09,90</p>
         </div>
 
@@ -1619,7 +1619,7 @@
         )" >
             <img src="https://i.postimg.cc/zfWbp9ff/78456789.png" alt="" id="img-produto">
             <p id="titulo-produto" >Comida e Saúde </p>
-            <p id="autor-produto" >Academia e Saúde</p>
+            <p id="autor-produto" >Saúde e Dietas Saudaveis</p>
             <p id="preço-produto" >R$ 09,90</p>
         </div>
        
