--- a/desenvolvimento.html
+++ b/desenvolvimento.html
@@ -74,6 +74,7 @@
         }
     </style>
 
+
 <header class="headermob">
 
     <!--LOGOTIPO DESKTOP-->
@@ -100,7 +101,7 @@
                     <a href="index.html" id="pagina-menu">Início</a>
                     <a href="promoçao.html" id="pagina-menu">Promoção e Ofertas</a>
                     <a href="desenvolvimento.html" id="pagina-menu">Desenvolvimento Social e Profissional</a>
-                    <a href="comida.html" id="pagina-menu">Comida e Saúde</a>
+                    <a href="comida.html" id="pagina-menu">Saúde e Dietas Saudaveis</a>
                     <a href="religião.html" id="pagina-menu">Religião</a>
                     <a href="todos.html" id="pagina-menu">Todos</a>
                 </div>
@@ -956,7 +957,7 @@
         </div>
         
         <nav>
-            <a href="comida.html" id="dados-menu">Comida e Saúde</a>
+            <a href="comida.html" id="dados-menu">Saúde e Dietas Saudaveis</a>
             <a href="desenvolvimento.html" id="dados-menu">Desenvolvimento Social e Profissional</a>
             <a href="promoçao.html" id="dados-menu">Promoção e Ofertas</a>
             <a href="todos.html" id="dados-menu">Todos</a>
