--- a/index.html
+++ b/index.html
@@ -1487,9 +1487,9 @@
         </article>
 
         <article id="bloco-bolha">
-            <a href="desenvolvimento.html" id="link-page">
-                <img src="https://i.postimg.cc/YCLDVQXx/DESENVOLVIMENTO-SOCIAL-E-PROFISSIONAL.png" alt="" id="img-bolha" class="bolha-img">
-                <p id="texto-bolinha">Desenvolvimento Social e Profissional</p>
+            <a href="religião.html" id="link-page">
+                <img src="https://i.postimg.cc/66mSBCHF/PROMO-O-E-OFERTAS-copiar.png" id="img-bolha" class="religiao-img">
+                <p id="texto-bolinha">Religião</p>
             </a>
 
         </article>
