--- a/index.html
+++ b/index.html
@@ -1360,19 +1360,23 @@
         <article class="fundo-carrossel" id="fundo-carrossel">
 
             <div class="mySlides fade" id="slidemob">
-                <img src="https://i.postimg.cc/HnFtDbST/banner1.jpg" alt="" class="img-slideshow" id="img-slideshow">
+                <img src="https://i.postimg.cc/pdpVYYhc/Prancheta-1-copiar-4.jpg" alt="" class="img-slideshow" id="img-slideshow">
+                <img src="https://i.postimg.cc/44tdS58r/mob-1.jpg" alt="" id="img-slideshowmob">
             </div>
 
             <div class="mySlides fade" id="slidemob">
-                <img src="https://i.postimg.cc/rmmGDf38/banner4.jpg" alt="" class="img-slideshow" id="img-slideshow">
+                <img src="https://i.postimg.cc/GpVLM8vL/Prancheta-1-copiar-5.jpg" alt="" class="img-slideshow" id="img-slideshow">
+                <img src="https://i.postimg.cc/KvDYZYhf/mob-1-copiar.jpg" alt="" id="img-slideshowmob">
             </div>
 
             <div class="mySlides fade" id="slidemob">
-                <img src="https://i.postimg.cc/VN4Bsx7G/banner3.jpg" alt="" class="img-slideshow" id="img-slideshow">
+                <img src="https://i.postimg.cc/xT2CDzhq/Prancheta-1-copiar-2.jpg" alt="" class="img-slideshow" id="img-slideshow">
+                <img src="https://i.postimg.cc/wvN6nqkh/mob-1-copiar-2.jpg" alt="" id="img-slideshowmob">
             </div>
 
             <div class="mySlides fade" id="slidemob">
-                <img src="https://i.postimg.cc/rmmGDf38/banner4.jpg" alt="" class="img-slideshow" id="img-slideshow">
+                <img src="https://i.postimg.cc/NjNfHPMr/Prancheta-1-copiar-3.jpg" alt="" class="img-slideshow" id="img-slideshow">
+                <img src="https://i.postimg.cc/3xrxWHKT/mob-1-copiar-3.jpg" alt="" id="img-slideshowmob">
             </div>
       
         </article>
