--- a/index.html
+++ b/index.html
@@ -1371,12 +1371,12 @@
 
             <div class="mySlides fade" id="slidemob">
                 <img src="https://i.postimg.cc/xT2CDzhq/Prancheta-1-copiar-2.jpg" alt="" class="img-slideshow" id="img-slideshow">
-                <img src="https://i.postimg.cc/wvN6nqkh/mob-1-copiar-2.jpg" alt="" id="img-slideshowmob">
+                <img src="https://i.postimg.cc/7YJSZ0Z4/Prancheta-1-copiar-2.jpg" alt="" id="img-slideshowmob">
             </div>
 
             <div class="mySlides fade" id="slidemob">
                 <img src="https://i.postimg.cc/NjNfHPMr/Prancheta-1-copiar-3.jpg" alt="" class="img-slideshow" id="img-slideshow">
-                <img src="https://i.postimg.cc/3xrxWHKT/mob-1-copiar-3.jpg" alt="" id="img-slideshowmob">
+                <img src="https://i.postimg.cc/TYJHQznh/mob-1-copiar-3.jpg" alt="" id="img-slideshowmob">
             </div>
       
         </article>
@@ -1723,7 +1723,7 @@
                     </div>
 
                     <div class="fundo-comprarcampanha">
-                        <a href="page/comboum.html" id="btn-comprarcampanha">Comprar</a>
+                        <a href="page/combodois.html" id="btn-comprarcampanha">Comprar</a>
                     </div>
 
                     </div>
