--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" media="screen and (max-width:700px)" href="mob/mobheader.css">
     <link rel="stylesheet" media="screen and (max-width:700px)" href="mob/mobmain.css">
     <link rel="stylesheet" media="screen and (max-width:700px)" href="mob/mobproduto.css">
+    <link rel="stylesheet" media="screen and (max-width:700px)" href="mob/campanhamob.css">
     <title>Pagina Inicial - Loja Aweto</title>
 </head>
 <body>
@@ -2083,11 +2084,30 @@
     </section>
 
     <section class="campanhadesk">
-        <article class="bannersum">
-            <a href="">OLA MUNDO</a>
-        </article>
 
-        <article class="banners2"></article>
+        <div class="desk-vantagens">
+            <p id="text-vantagens">Quais São as Vantagens do E-book ?</p>
+        </div>
+
+        <div class="desk-textovantagens">
+
+            <div id="text-vantagensbloco">
+                <p id="text-vantagenstext">Uma das maiores vantagens do e-book, é que ele <b>pode ser lido em vários dispositivos</b> e também pode ser muito mais compartilhado, expandindo assim o acesso à leitura. <b>Você pode ler no celular, no computador ou em um tablet, caso não tenha um leitor digital.</b></p>
+            </div>
+            <div id="text-vantagensbloco">
+                <p id="text-vantagenstext"><b>Os ebooks são obviamente mais amigos do ambiente.</b> Além de não consumirem papel, não precisam de tintas tóxicas, nem poluem o ambiente com processos de empacotamento e transporte. <b>Podes ter infinitas cópias de um ebook sabendo que não estás a matar nenhuma árvore</b> e que estás a reduzir a tua pegada ecológica.</p>
+            </div>
+            <div id="text-vantagensbloco">
+                <p id="text-vantagenstext">Um investimento que, pelas razões que já explicámos, compensa. Compensa também a longo-prazo, porque <b>os ebooks são por vezes mais baratos do que os livros em papel, uma vez que não têm custos de impressão.</b> Aliás, podes até encontrar muitos livros gratuitos, o que é ótimo naqueles casos em que o livro afinal não te agradou assim tanto e, desta forma, já não te arrependes do dinheiro que gastaste.</p>
+             </div>
+
+
+        </div>
+
+        <div id="vantagens-arrasta">
+            Arraste para o Lado <i class="fa-solid fa-arrow-right" id="seta-right"></i>
+         </div>
+
     </section>
 
     <section class="section-primeiro">
